src/objects/TRACKING_LOG_EVENT__e.object
<CustomObject>
    <fields>
        <fullName>END_CPUTIME__c</fullName>
        <label>END_CPUTIME</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>END_DATE__c</fullName>
        <label>END_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>END_DML_OPERATIONS__c</fullName>
        <label>END_DML_OPERATIONS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>END_HEAPSIZE__c</fullName>
        <label>END_HEAPSIZE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>END_QUERYROWS__c</fullName>
        <label>END_QUERYROWS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>END_QUERYS__c</fullName>
        <label>END_QUERYS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERROR_DESCRIPTION__c</fullName>
        <label>ERROR_DESCRIPTION</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERROR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ERROR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXCEPTION__c</fullName>
        <label>EXCEPTION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KEY__c</fullName>
        <label>KEY</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LINE_NUMBER__c</fullName>
        <label>LINE_NUMBER</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NAME__c</fullName>
        <label>NAME</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUANTITY_RECORDS__c</fullName>
        <label>QUANTITY_RECORDS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REQUEST__c</fullName>
        <label>REQUEST</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RESPONSE__c</fullName>
        <label>RESPONSE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>STACKTRACE__c</fullName>
        <label>STACKTRACE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>START_CPUTIME__c</fullName>
        <label>START_CPUTIME</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>START_DATE__c</fullName>
        <label>START_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>START_DML_OPERATIONS__c</fullName>
        <label>START_DML_OPERATIONS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>START_HEAPSIZE__c</fullName>
        <label>START_HEAPSIZE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>START_QUERYROWS__c</fullName>
        <label>START_QUERYROWS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>START_QUERYS__c</fullName>
        <label>START_QUERYS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <label>STATUS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TYPE__c</fullName>
        <label>TYPE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VERSION__c</fullName>
        <label>VERSION</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>TRACKING LOG EVENT</label>
    <pluralLabel>TRACKING LOG EVENTS</pluralLabel>
</CustomObject>